--- a/Selenium-automation/Selenium-automation.csproj
+++ b/Selenium-automation/Selenium-automation.csproj
@@ -52,11 +52,21 @@
     <Reference Include="WebDriver, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net45\WebDriver.dll</HintPath>
     </Reference>
+    <Reference Include="WebDriver.Support, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.3.141.0\lib\net45\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions.cs" />
     <Compile Include="Initializer.cs" />
+    <Compile Include="Base.cs" />
+    <Compile Include="PageObjects\ElementsPage.cs" />
+    <Compile Include="PageObjects\HomePage.cs" />
+    <Compile Include="Pages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ElementsTests.cs" />
+    <Compile Include="Tests\HomePageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
