--- a/Selenium-automation/packages.config
+++ b/Selenium-automation/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net472" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
 </packages>
