--- a/Selenium-automation/Selenium-automation.csproj
+++ b/Selenium-automation/Selenium-automation.csproj
@@ -58,11 +58,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions.cs" />
+    <Compile Include="Helpers\Assertions.cs" />
+    <Compile Include="Helpers\Components.cs" />
     <Compile Include="Initializer.cs" />
-    <Compile Include="Base.cs" />
+    <Compile Include="Helpers\Base.cs" />
     <Compile Include="PageObjects\ElementsPage.cs" />
+    <Compile Include="PageObjects\Elements\UserForm.cs" />
     <Compile Include="PageObjects\HomePage.cs" />
-    <Compile Include="Pages.cs" />
+    <Compile Include="PageObjects\Elements\TextBox.cs" />
+    <Compile Include="Helpers\Pages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\ElementsTests.cs" />
