--- a/Selenium-automation/App.config
+++ b/Selenium-automation/App.config
@@ -1,6 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <startup> 
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>  
+  <log4net>
+        <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
+            <param name="File" value="Log.txt" />
+            <param name="AppendToFile" value="true" />
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+            </layout>
+        </appender>
+        
+        <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+            </layout>
+        </appender>
+    <logger name="ConsoleLogger">
+      <appender-ref ref="LogFileAppender"/>
+      <appender-ref ref="ConsoleAppender" />
+    </logger>
+  </log4net>
 </configuration>
