--- a/Selenium-automation/Jenkins/Jenkinsfile
+++ b/Selenium-automation/Jenkins/Jenkinsfile
@@ -1,19 +1,19 @@
 ﻿def releasePath = "%WORKSPACE%\Release job";
 
 pipeline {
-    agent any
+    agent any 
     stages {
-        stage('Copy from release job') {
+        stage('Get latest version of tests') { 
             steps {
-                fileOperations([folderCopyOperation(destinationFolderPath: '', sourceFolderPath: '"%WORKSPACE%\\Release job"')])
+                fileOperations([folderCopyOperation(destinationFolderPath: '', sourceFolderPath: '"%WORKSPACE%\\Release job"')]) 
             }
         }
-        stage('Run tests') {
+        stage('Run tests') { 
             steps {
-                cd packages/bin/net20 && nunit3-console.exe "../../../Selenium-automation/bin/Debug/Selenium-automation.dll" --result="../../../TestResult.xml"
+                cd packages/bin/net20 && nunit3-console.exe "../../../Selenium-automation/bin/Debug/Selenium-automation.dll" --result="../../../TestResult.xml" 
             }
         }
-        stage('Get test report') {
+        stage('Get report') { 
             steps {
                 nunit testResultsPattern: 'TestResults.xml'
             }
