Add nunit console

--- a/Selenium-automation/Jenkins/Jenkinsfile
+++ b/Selenium-automation/Jenkins/Jenkinsfile
@@ -1,4 +1,6 @@
-﻿def releasePath = "%WORKSPACE%\Release job";
+﻿#!/usr/bin/env groovy
+
+def releasePath = "%WORKSPACE%\Release job";
 
 pipeline {
     agent any 
