--- a/Selenium-automation/Selenium-automation.csproj
+++ b/Selenium-automation/Selenium-automation.csproj
@@ -43,6 +43,7 @@
     <Reference Include="log4net, Version=2.0.12.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.12\lib\net45\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -69,6 +70,7 @@
     <Compile Include="Helpers\Assertions.cs" />
     <Compile Include="Helpers\Components.cs" />
     <Compile Include="Helpers\Constants.cs" />
+    <Compile Include="Helpers\Utils.cs" />
     <Compile Include="Initializer.cs" />
     <Compile Include="Helpers\Base.cs" />
     <Compile Include="Logger.cs" />
