--- a/Selenium-automation/packages.config
+++ b/Selenium-automation/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.12" targetFramework="net472" />
+  <package id="Microsoft.VisualBasic" version="10.3.0" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
