--- a/Selenium-automation/Selenium-automation.csproj
+++ b/Selenium-automation/Selenium-automation.csproj
@@ -92,7 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Jenkins\Jenkinsfile" />
+    <None Include="Jenkins\Pipeline" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
